更新项目路由，删除项目时返回204状态码；前端重构App.vue，添加用户认证状态管理，新增个人中心和注销功能；优化Dashboard.vue，添加项目删除功能和加载状态；更新国际化文件，增加个人中心相关翻译。

--- a/nexaura-frontend/src/locales/en.json
+++ b/nexaura-frontend/src/locales/en.json
@@ -1,12 +1,14 @@
 {
   "welcome": "Welcome to NexAura",
   "app": {
-    "tagline": "Intelligent Document Creation Assistant"
+    "tagline": "Your Next-Gen AI Assistant"
   },
   "nav": {
     "home": "Home",
     "login": "Login",
-    "dashboard": "Dashboard"
+    "dashboard": "Dashboard",
+    "profile": "Profile",
+    "logout": "Logout"
   },
   "hero": {
     "title": "Welcome to NEXAURA",
@@ -27,7 +29,7 @@
     "card4_desc": "Based on a domestic computing power platform, ensuring data security."
   },
   "login": {
-    "title": "Login to NEXAURA",
+    "title": "Login to your account",
     "email": "Email",
     "password": "Password",
     "button_login": "Login",
@@ -80,5 +82,12 @@
     "project_desc_placeholder": "Briefly describe the content and goals of this project",
     "button_cancel": "Cancel",
     "button_create": "Create Project"
+  },
+  "profile": {
+    "title": "Profile",
+    "username": "Username",
+    "email": "Email",
+    "loading": "Loading user information...",
+    "logout": "Logout"
   }
 } 
